<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:background="@color/colorBackgroundMain">


    <TextView
            style="@style/CustomFontStyle"
        android:id="@+id/TextView02"
        android:text="Where?"
        />



    <TextView
            style="@style/CustomFontStyle"
        android:id="@+id/TextView04"
        android:text="Where?"
        />

    <TextView
        style="@style/CustomFontStyle"
    android:id="@+id/TextView05"
        />

    <TextView
            style="@style/CustomFontStyle"
        android:id="@+id/do_celu"
        android:text="Odległość zadziałania od celu[m]:"
     />

    <ProgressBar
        android:id="@+id/load_dist"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="#1A30AC"
        android:secondaryProgressTint="#EC1A0B"/>

    <TextView
        style="@style/CustomFontStyle"
        android:id="@+id/edit_krok"
        android:text="Krok:"
        />


    <ProgressBar
        android:id="@+id/load_progres_timeout"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/design_default_color_error"
        android:secondaryProgressTint="#DFCD2A" />

    <TextView
        style="@style/CustomFontStyle"
        android:id="@+id/textTimeout"
        android:text="timeout"
         />


    <Button
        style="@style/mybuttonstyle"
        android:id="@+id/activity_ustawienia_lokalizacja"
        android:layout_width="match_parent"
        android:text="@string/lokalizacja"
        />

    <Button
        style="@style/mybuttonstyle"
        android:id="@+id/activity_ustawienia_wykonywania"
        android:layout_width="match_parent"
        android:text="@string/link"
         />

    <Button
        style="@style/mybuttonstyle"
        android:id="@+id/activity_ustawienia_bluetooth"
        android:layout_width="match_parent"
        android:text="@string/bluetooth"
        />


    <Button
        style="@style/mybuttonstyle"
        android:id="@+id/activity_ustawienia_inne"
        android:layout_width="match_parent"
        android:text="@string/inne"
        />


    <Button
        style="@style/mybuttonstyle"
        android:id="@+id/clear_log"
        android:layout_width="match_parent"
        android:text="@string/wyczysc_logi"
        />



    <Switch
        android:id="@+id/switchBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Automatyka" />

    <Switch
        android:id="@+id/refreshLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Stop Log" />
    <TextView
        android:id="@+id/textLogi"
        android:layout_width="match_parent"
        android:layout_height="327dp"
        android:layout_marginTop="1dp"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="START/STOP"
        android:visibility="visible" />

</LinearLayout>